ファイルアップロード処理の実装

--- a/Notes.Web/appsettings.json
+++ b/Notes.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=notesdb;Username=notes;Password=notes"
+  },
   "AllowedHosts": "*"
 }
