--- a/Notes.Web/bundleconfig.json
+++ b/Notes.Web/bundleconfig.json
@@ -14,15 +14,15 @@
   {
     "outputFileName": "wwwroot/lib/vendor.min.css",
     "inputFiles": [
-      "node_modules/bootstrap/dist/css/bootstrap.min.css"
+      "wwwroot/lib/twitter-bootstrap/css/bootstrap.min.css"
     ]
   },
   {
     "outputFileName": "wwwroot/lib/vendor.min.js",
     "inputFiles": [
-      "node_modules/jquery/dist/jquery.min.js",
-      "node_modules/popper.js/dist/umd/popper.min.js",
-      "node_modules/bootstrap/dist/js/bootstrap.min.js"
+      "wwwroot/lib/jquery/jquery.min.js",
+      "wwwroot/lib/popper.js/umd/popper.min.js",
+      "wwwroot/lib/twitter-bootstrap/js/bootstrap.min.js"
     ]
   }
 ]
